--- a/src/features/article/component/ArticleList.less
+++ b/src/features/article/component/ArticleList.less
@@ -60,9 +60,9 @@
         align-items: center;
 
         .author {
-          min-width: 60px;
+          margin-right: 5px;
         }
-
+        
         .date {
           width: 90px;
         }
@@ -75,6 +75,8 @@
 
     .thumbnail {
       display: inline-flex;
+      align-items: flex-end;
+      padding-bottom: 20px;
 
       img {
         width: 120px;
