--- a/src/features/ask/component/AskItem.less
+++ b/src/features/ask/component/AskItem.less
@@ -5,6 +5,13 @@
   padding: 20px;
   margin-bottom: 15px;
 
+  .avatar {
+    img {
+      height: 30px;
+      width: 30px;
+    }
+  }
+
   .content {
     flex-grow: 1;
     .header {
@@ -41,6 +48,7 @@
     }
 
     .main {
+      margin-right: 100px;
       div {
         margin-left: 5px;
         font-size: 12px;
