--- a/src/features/ask/component/AskItemDetail.less
+++ b/src/features/ask/component/AskItemDetail.less
@@ -8,6 +8,13 @@
     background-color: #fff;
     padding: 20px;
 
+    .avatar {
+      img {
+        height: 40px;
+        width: 40px;
+      }
+    }
+
     .content {
       flex-grow: 1;
       .title {
