--- a/src/features/expert/component/Header.less
+++ b/src/features/expert/component/Header.less
@@ -23,6 +23,7 @@
         .detail {
             padding-left: 20px;
             flex-grow: 1;
+            position: relative;
         }
 
         .detail-top {
@@ -64,7 +65,7 @@
 
         .action {
             position: absolute;
-            right: 100px;
+            left: 500px;
             bottom: 30px;
 
             .ant-btn:first-of-type {
