--- a/src/features/home/component/CounselorContent.less
+++ b/src/features/home/component/CounselorContent.less
@@ -41,7 +41,6 @@
       display: flex;
       padding: 10px 20px;
       flex-wrap: wrap;
-      justify-content: space-between;
 
       .item {
         background: #fff;
@@ -50,6 +49,7 @@
         width: 200px;
         border: 1px solid #e8e8e8;
         transition: all 0.5s;
+        margin-right: 15px;
 
         &:hover {
           box-shadow: 0 2px 20px 0 #eaeaea;
