--- a/src/features/apply/Apply.less
+++ b/src/features/apply/Apply.less
@@ -1,64 +1,63 @@
 @import '~@styles/global.less';
 
 .pcs-apply {
-    width: 850px;
-    margin: 30px auto 0;
+  width: 850px;
+  margin: 30px auto 0;
 
-    .steps-bar {
-        background-color: #fff;
-        height: 80px;
-        padding: 0 20px;
-        display: flex;
-        align-items: center;
-        border-radius: @border-radius;
-    }
+  .steps-bar {
+    background-color: #fff;
+    height: 80px;
+    padding: 0 20px;
+    display: flex;
+    align-items: center;
+    border-radius: @border-radius;
+  }
 
-    .steps-content {
-        margin-top: 20px;
-        background-color: #fff;
-        border-radius: @border-radius;
-        padding: 10px 20px;
+  .steps-content {
+    margin-top: 20px;
+    background-color: #fff;
+    border-radius: @border-radius;
+    padding: 20px;
 
-        .apply-agreements {
-            h2 {
-                text-align: center
-            }
-
-            p {
-                height: 400px;
-                overflow: scroll;
-                word-break: break-word;
-                padding: 10px;
-            }
-        }
-
-        .ant-form {
-            .detail-guide {
-                padding: 10px;
-                width: 500px;
-                margin: 0 auto;
-                border: 1px solid rgba(0, 0, 0, 0.15);
-
-                h3 {
-                    text-align: center
-                }
-            }
-        }
-
-        .apply-credit {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-
-            .ant-upload {
-                width: 400px;
-                height: 150px;
-            }
-        }
-    }
-
-    .steps-action {
+    .apply-agreements {
+      h1, h2 {
         text-align: center;
-        margin-top: 10px;
+      }
+
+      p {
+        overflow: scroll;
+        word-break: break-word;
+        padding: 10px;
+      }
     }
+
+    .ant-form {
+      .detail-guide {
+        padding: 10px;
+        width: 500px;
+        margin: 0 auto;
+        border: 1px solid rgba(0, 0, 0, 0.15);
+
+        h3 {
+          text-align: center;
+        }
+      }
+    }
+
+    .apply-credit {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      .ant-upload {
+        width: 400px;
+        height: 150px;
+      }
+    }
+  }
+
+  .steps-action {
+    text-align: center;
+    margin-top: 10px;
+  }
 }
