--- a/src/features/article/component/ArticlePost.less
+++ b/src/features/article/component/ArticlePost.less
@@ -38,6 +38,13 @@
       }
     }
 
+    .content {
+      blockquote {
+        padding-left: 10px;
+        border-left: 5px solid #afafaf;
+      }
+    }
+
     .author {
       margin-top: 20px;
     }
