--- a/src/features/expert/Expert.less
+++ b/src/features/expert/Expert.less
@@ -2,6 +2,7 @@
     width: 100%;
     margin-top: 1px;
     background-color: #fff;
+    overflow: auto;
 
     .float-card-wrapper {
         @media (max-width: 1300px) {
