--- a/src/features/expert/component/CounselorDetail.less
+++ b/src/features/expert/component/CounselorDetail.less
@@ -1,34 +1,40 @@
 .tab {
-    margin: 40px;
-    width: 800px;
+  margin: 40px;
+  width: 800px;
+  min-height: 450px;
 
-    .tab-basics {
-        padding: 20px;
+  .tab-basics {
+    padding: 20px;
 
-        .info {
-            display: flex;
-            height: 200px;
+    .info {
+      display: flex;
+      height: 200px;
 
-            img {
-                width: 100px;
-                height: 100px;
-                margin-right: 40px;
-            }
+      img {
+        width: 100px;
+        height: 100px;
+        margin-right: 40px;
+      }
 
-            .content>span {
-                font-size: 16px;
-                color: rgba(0, 0, 0, 0.52);
-            }
-        }
+      .content > span {
+        font-size: 16px;
+        color: rgba(0, 0, 0, 0.52);
+      }
     }
+  }
 
-    .tab-letters {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
+  .tab-letters {
+    display: flex;
+    flex-direction: column;
 
-        .ant-btn.load-more {
-            width: 100px;
-        }
+    .ant-btn.load-more {
+      width: 100px;
     }
+  }
+
+  .tab-details {
+    & > .item:not(:last-of-type) {
+      margin-bottom: 40px;
+    }
+  }
 }
